--- a/index.html
+++ b/index.html
@@ -17,23 +17,28 @@
          <ul>
              <li>
                  <label for="name">Name:</label>
-                 <input type="text" id="name" name="user_name">
+                 <input type="text" id="name" name="user_name"
+                  placeholder="Enter your name here">
                 </li>
              <li>
                  <label for="address">Address:</label>
-                 <input type="text" id="address" name="user_address">
+                 <input type="text" id="address" name="user_address" 
+                 placeholder="Enter your address here">
                 </li>
              <li>
                  <label for="phone_number">Phone number:</label>
-                 <input type="number" id="number" name="user_number">
+                 <input type="number" id="number" name="user_number"
+                 placeholder="Enter at least 11digit here">
                 </li>
              <li>
                  <label for="mail">E-mail</label>
-                 <input type="email" id="mail" name="user_email">
+                 <input type="email" id="mail" name="user_email" 
+                 placeholder="Enter your email here">
                 </li>
              <li>
                  <label for="iq">IQ</label>
-                 <input type="text" id="iq" name="user_iq">
+                 <input type="text" id="iq" name="user_iq" 
+                 placeholder="Enter your iq level here">
                 </li>
              <li>
                  <label for="gender">Gender</label><br>
