--- a/index.html
+++ b/index.html
@@ -17,28 +17,25 @@
          <ul>
              <li>
                  <label for="name">Name:</label>
-                 <input type="text" id="name" name="user_name"
-                  placeholder="Enter your name here">
+                 <input type="text" id="name" name="user_name">
                 </li>
              <li>
                  <label for="address">Address:</label>
-                 <input type="text" id="address" name="user_address" 
-                 placeholder="Enter your address here">
+                 <input type="text" id="address" name="user_address">
                 </li>
              <li>
                  <label for="phone_number">Phone number:</label>
-                 <input type="number" id="number" name="user_number"
-                 placeholder="Enter at least 11digit here">
+                 <input type="number" id="number" name="user_number">
                 </li>
              <li>
                  <label for="mail">E-mail</label>
                  <input type="email" id="mail" name="user_email" 
-                 placeholder="Enter your email here">
+                 >
                 </li>
              <li>
                  <label for="iq">IQ</label>
                  <input type="text" id="iq" name="user_iq" 
-                 placeholder="Enter your iq level here">
+                 >
                 </li>
              <li>
                  <label for="gender">Gender</label><br>
