--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
 <form action="/my-handling-form-page" method="POST">
-<h1>Application for Permission  To ate My  Daughter</h1>
+<h1>Application for Permission  To Date My  Daughter</h1>
 <P><strong>Note:</strong>This form is to be complete at least 21 days
      prior to the data</P>
      <fieldset class="box">
