--- a/index.html
+++ b/index.html
@@ -17,25 +17,33 @@
          <ul>
              <li>
                  <label for="name">Name:</label>
-                 <input type="text" id="name" name="user_name">
+                 <input type="text" id="name" name="user_name" placeholder=
+                 "Enter your name here">
+                 
                 </li>
              <li>
                  <label for="address">Address:</label>
-                 <input type="text" id="address" name="user_address">
+                 <input type="text" id="address" name="user_address" 
+                 placeholder=
+                 "Enter your name here">
                 </li>
              <li>
                  <label for="phone_number">Phone number:</label>
-                 <input type="number" id="number" name="user_number">
+                 <input type="number" id="number" name="user_number"
+                 placeholder=
+                 "Enter your name here">
                 </li>
              <li>
                  <label for="mail">E-mail</label>
                  <input type="email" id="mail" name="user_email" 
-                 >
+                 placeholder=
+                 "Enter your name here" >
                 </li>
              <li>
                  <label for="iq">IQ</label>
                  <input type="text" id="iq" name="user_iq" 
-                 >
+                 placeholder=
+                 "Enter your name here" >
                 </li>
              <li>
                  <label for="gender">Gender</label><br>
@@ -88,7 +96,8 @@
      </fieldset>
      <fieldset class="box">
          <legend>Eassy section</legend>
-<p>In less than 50 words or more explain why you want to date my daughter</p>
+<label>In less than 50 words or more explain why you want to date
+     my daughter</label>
 <textarea id="msg" name="user_exp" placeholder="Enter you text here"
 rows="5" cols="60"></textarea><br>
 <label for="msg" name="user_msg">Please upload contact
